fix contant page on mobile (icons) - close #12

--- a/css/Contact.module.css
+++ b/css/Contact.module.css
@@ -87,6 +87,6 @@
   }
 
   .contactLink img {
-    width: 90%;
+    width: 2rem;
   }
 }
